# radiant-test

./: .gitignore  README.md  add_comment.py  convert_bias_files.py  pyproject.toml  radiant-test.py  run_set.py  run_test.py
examples/: AWG4022_test.py  Keysight81160A.py  create_template_xcorr.py  create_waveform.py  nu_LPDA_wH_10_viewing_-1.46.json  nu_LPDA_wH_11_viewing_2.09.json  nu_LPDA_wH_2_viewing_4.37.json  nu_LPDA_wH_3_viewing_11.22.json  pulser_event_station12_run843_evt5_ch14.json  pulser_event_station12_run843_evt5_ch15.json  set_arduino.py  template2_wo_hardwareResponse.json  template2_wo_hardwareResponse_2.5GSps.json  template4_wo_hardwareResponse.json  template5_wo_hardwareResponse.json  three_sinus_pulses.json  truth_template_2_average_ch_1.json  waveform.json
radiant_test/: AWG4022.py  AbstractSignalGenerator.py  ArduinoNano.py  Keysight81160A.py  RADIANTChannelTest.py  RADIANTTest.py  SigGenTest.py  Test.py  TestSet.py  __init__.py  radiant_helper.py  run.py  util.py
results/: .placeholder.txt
scripts/: AUXTriggerResponseThresh_plot.py  AUXTriggerResponse_plot.py  BiasScan_plot.py  ExtSigGenSine_plot.py  FrontEndNoise_plot.py  FrontEndResponse_plot.py  HarmonicDistortion_plot.py  LAB4DGlitch_plot.py  LAB4DTune_plot.py  Set_plot.py  SigGenSine_plot.py  SignalGen2LAB4D_plot.py  Switch24_plot.py  WindowStability_plot.py  __init__.py  add_measurements_to_db.py  plot_all_channels_from_one_run.py  results_summary.py
setconfig/: AUXTriggerResponse.json  DummySet.json  MultiRecordRun.json  RADIANT.json  RADIANT2.json  SigGenSine_uart.json  SiteSet.json
(+45 files in other folders)
